z-index issue solved

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -301,13 +301,19 @@ html{
     z-index: 1;
 }
 .mobile-container{
-    display: none;
+    display: none !important;
 }
 .text-section-mobile{
     display: none !important
 }
 .mobile-container img{
     display: none !important;
+}
+.no-js .owl-carousel, .owl-carousel.owl-loaded {
+	display: none !important;
+}
+.owl-carousel{
+    z-index: -1 !important;
 }
 
 
@@ -327,8 +333,14 @@ html{
     .container{
         display: none;
     }
+    .no-js .owl-carousel, .owl-carousel.owl-loaded {
+        display: block !important;
+    }
+    .owl-carousel{
+        z-index: 1;
+    }
     .mobile-container{
-        display: block;
+        display: block !important;
         width: 100%;
         height: 100vh;
     }
