--- a/style.css
+++ b/style.css
@@ -301,13 +301,16 @@ html{
     z-index: 1;
 }
 .mobile-container{
-    display: none;
+    display: none !important;
 }
 .text-section-mobile{
     display: none !important
 }
 .mobile-container img{
     display: none !important;
+}
+.owl-carousel{
+    z-index: -1 !important;
 }
 
 
@@ -328,12 +331,15 @@ html{
         display: none;
     }
     .mobile-container{
-        display: block;
+        display: block !important;
         width: 100%;
         height: 100vh;
     }
     .mobile-container img{
         display:  block !important;
+    }
+    .owl-carousel{
+        z-index: 1 !important;
     }
     .slide{
         height: 100vh;
